# TradePilot-OS

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Module Wise Track.xlsx  README.md  SECURITY.md  TradePilot_OS_Product_Blueprint.xlsx  TradePilot_OS_Product_Blueprint_Latest.xlsx  main.py  project_manifest.yaml  pyproject.toml  requirements.txt  review.txt  ~$Module Wise Track.xlsx
docs/01_Strategy/: DOC-0001_Product_Vision.md  DOC-0003_User_Personas_Stakeholders.md  DOC-0004_Product_Scope_And_Editions.md  DOC-0005_User_Journeys_And_User_Stories.md  DOC-0006_Use_Cases.md
docs/02_Requirements/: Acceptance_Criteria_Register.xlsx  BR_Register.xlsx  Core_Module_Register.xlsx  DOC-0007_Functional_Requirements.md  DOC-0008_Non_Functional_Requirements.md  DOC-0009_Business_Rules.md  DOC-0010_Requirements_Traceability_Matrix.md  DOC-0011_Core_Platform_Requirements.md  FR_Register.xlsx  NFR_Register.xlsx  RTM_Register.xlsx
docs/03_Trading_Domain/: DOC-0013_Market_Data_Instrument_Management.md  DOC-0014_Watchlist_Management.md  Watchlist_Profile_Register.xlsx
docs/04_Architecture/: ARCH-0001_Architecture_Overview.md
docs/05_Implementation/: IMP-0001_Implementation_Guide.md  TP-IMP-E001-TSK-0001.md  TP-IMP-E001-TSK-0002.md
docs/06_Standards/: STD-0001_Coding_Standards.md  STD-0002_Documentation_Standards.md  STD-0003_Git_Workflow.md  STD-0004_Versioning_Standards.md  STD-0005_Testing_Standards.md
docs/06_Standards/Core/: STD-0001_Coding_Standards.md  STD-0002_Documentation_Standards.md  STD-0003_Git_Workflow.md  STD-0004_Versioning_Standards.md  STD-0005_Testing_Standards.md
docs/06_Standards/Development/: GOV-0001_Project_Governance.md
docs/07_ADR/: ADR-0000_ADR_Guidelines.md  ADR-0001_Project_Technology_Stack.md  ADR-0002_Shared_Infrastructure_Layer.md  ADR-0003_Base_Configuration_Manager.md
docs/08_Project_Management/: TradePilot_Engineering_Register.xlsx  TradePilot_Master_Tracker.xlsx  TradePilot_Project_Blueprint.xlsx  TradePilot_Project_Management_v0.1.0.xlsx  TradePilot_Project_Management_v0.2.0.xlsx  TradePilot_Project_Management_v0.3.0.xlsx  TradePilot_Release_Tracker.xlsx  TradePilot_Risk_Register.xlsx  TradePilot_Test_Tracker.xlsx
src/config/: base_configuration_manager.py  config_manager.py  configuration_migration_manager.py  default_settings.py  schema_version.py  settings_manager.py
src/config/migrations/: registry.py  v0_to_v1.py
src/core/: __init__.py  application.py  application_context.py  bootstrap.py  constants.py  version.py
src/repositories/: __init__.py
src/shared/exceptions/: config_exceptions.py
src/shared/serialization/: json_storage.py
src/shared/utilities/: deep_merge.py
src/shared/validation/: config_validator.py
tests/config/: test_deep_merge.py  test_schema_version.py
tests/performance/: __init__.py
