[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "tradepilot-os"
version = "0.1.0a1"
description = "Enterprise-grade AI-powered trading and investment operating system for Indian markets."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }

authors = [
    { name = "Ravi Kajla" }
]

keywords = [
    "tradepilot",
    "trading",
    "investment",
    "mcx",
    "stocks",
    "india",
    "algorithmic-trading",
    "ai",
    "desktop"
]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed"
]

dependencies = [
    "PySide6>=6.9.1",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "PyYAML>=6.0.2",
    "typer>=0.16.0",
    "rich>=14.1.0",
    "httpx>=0.28.1",
    "SQLAlchemy>=2.0.41",
    "alembic>=1.16.4",
    "orjson>=3.11.1",
    "platformdirs>=4.3.8",
    "openpyxl>=3.1.5"
]

[project.optional-dependencies]
dev = [
    "black>=25.1.0",
    "ruff>=0.12.7",
    "mypy>=1.17.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pre-commit>=4.2.0"
]

docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.16"
]

[project.urls]
Homepage = "https://github.com/rskajla3011/TradePilot-OS"
Repository = "https://github.com/rskajla3011/TradePilot-OS"
Issues = "https://github.com/rskajla3011/TradePilot-OS/issues"

[project.scripts]
tradepilot = "tradepilot.cli.main:app"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "SIM"
]

ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_configs = true
warn_unused_ignores = true
warn_return_any = true
show_error_codes = true
pretty = true

[tool.pytest.ini_options]
pythonpath = [
    "src"
]

testpaths = [
    "tests"
]

addopts = [
    "-ra",
    "--strict-markers",
    "--cov=src/tradepilot",
    "--cov-report=term-missing"
]

[tool.coverage.run]
branch = true
source = [
    "src/tradepilot"
]

[tool.coverage.report]
show_missing = true
skip_covered = false